# gold_iq

./: docker-compose.yaml
backend/: goldiq_db
backend/app/: main.py
backend/app/agents/: file.txt
backend/app/models/: EmailRequest.py  User.py  file.txt
backend/app/models/dto/: UserRegisterDto.py
backend/app/services/: file.txt  jwt_handling_service.py
backend/backend/: dockerfile  goldiq_db  main.py  pyproject.toml
backend/backend/models/: EmailRequest.py  User.py
backend/backend/models/dto/: SendEmailDto.py  UserLoginDto.py
backend/data_collector/: pyproject.toml
backend/data_collector/datasets/: file.txt  gold_data.csv  gold_reserves.csv  inflation.csv  inflation_rate.csv  interest_data.csv  interest_rates.csv  sp500.csv  sp500_data.csv  usd_index.csv
backend/data_collector/scripts/: fetch_gold_price.ipynb  fetch_gold_reserves.ipynb  fetch_inflation_rates.ipynb  fetch_interest_rate.ipynb  fetch_s&p_500.ipynb  fetch_usd_index.ipynb  inflation_data.ipynb  interests_data.ipynb  script.ipynb  sp500_data.ipynb
chatbot/: app.py  chatbot.py  dockerfile  pyproject.toml
chatbot/.chainlit/: config.toml
frontend/frontend/: package-lock.json  package.json
frontend/frontend/src/: App.css  App.js
frontend/frontend/src/assets/: file.txt
frontend/frontend/src/components/: Footer.js  Header.js  file.txt
frontend/frontend/src/pages/: About.js  AuthForm.js  Contact.js  Home.js
