[project]
name = "data-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fredapi>=0.5.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "python-dotenv>=1.1.0",
    "xlrd>=2.0.1",
    "yfinance>=0.2.56",
]
